<?xml version="1.0"?>
<package format="2">
  <name>Omatcha_detection</name>
  <version>0.0.0</version>
  <description>Team daisangen package</description>

  <maintainer email="s22c1033@s.chibakoudai.jp">Kadono Kodai</maintainer>
  <author email="s22c1033@s.chibakoudai.jp">Kadono Kodai</author>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
